Adds JWT Security
Adds back jwt security configuration

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,26 @@
             <version>10.0.0-M7</version>
         </dependency>
 
+        <!-- CONFIGURACIÓN BÁSICA DE SEGURIDAD -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.3.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.4.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
+
         <!-- CONFIGURACIÓN TESTING -->
         <dependency>
             <groupId>com.h2database</groupId>
@@ -117,6 +137,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>2.4.2</version>
+        </dependency>
+		
+		<dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.1</version>
         </dependency>
 
     </dependencies>
