--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,20 +3,27 @@ spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://localhost:3306/APachas?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=abc123.
+spring.datasource.initialization-mode=always
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=false
+
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #SQL IN CONSOLE
 spring.jpa.show-sql=true
+
 #PAGINATION (URL PARAMETERS: ?page=0&size=5)
 spring.data.rest.page-param-name=page
 spring.data.rest.limit-param-name=limit
 spring.data.rest.sort-param-name=sort
 spring.data.rest.default-page-size=5
 spring.data.rest.max-page-size=10
+
 #DATE-TIME
 spring.jackson.date-format=dd-MM-yyyy
 
@@ -27,3 +34,17 @@ spring.jackson.date-format=dd-MM-yyyy
 #spring.datasource.driverClassName = org.h2.Driver
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
+#SECURITY DEFAULT CONFIGURATION
+spring.security.user.name = noa
+spring.security.user.password= abc123.
+
+#SSL: crear certificado (C/Program\ \Files/Java/jre1.8.0_251/bin): ./keytool -genkey -alias tfgsecurity -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore tfgsecurity.p12 -validity 3650
+server.port = 8443
+server.ssl.enabled= true
+server.ssl.key-store= src/main/resources/tfgsecurity.p12
+server.ssl.key-store-password= tfgsecuritypassabc123.
+server.ssl.key-store-type= PKCS12
+server.ssl.key-alias= tfgsecurity
+
+#JWT
+jwt.secret=techgeeknext
