Adds search users view
Adds view for user user entity. List all users and filter by user login. Allows to add a user to friends of the authenticated user or delete it.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,12 +39,12 @@ spring.security.user.name = noa
 spring.security.user.password= abc123.
 
 #SSL: crear certificado (C/Program\ \Files/Java/jre1.8.0_251/bin): ./keytool -genkey -alias tfgsecurity -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore tfgsecurity.p12 -validity 3650
-server.port = 8443
-server.ssl.enabled= true
-server.ssl.key-store= src/main/resources/tfgsecurity.p12
-server.ssl.key-store-password= tfgsecuritypassabc123.
-server.ssl.key-store-type= PKCS12
-server.ssl.key-alias= tfgsecurity
+#server.port = 8443
+#server.ssl.enabled= true
+#server.ssl.key-store= src/main/resources/tfgsecurity.p12
+#server.ssl.key-store-password= tfgsecuritypassabc123.
+#server.ssl.key-store-type= PKCS12
+#server.ssl.key-alias= tfgsecurity
 
 #JWT
 jwt.secret=techgeeknext
