--- a/src/main/resources/APachas/package.json
+++ b/src/main/resources/APachas/package.json
@@ -25,7 +25,9 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "@popperjs/core": "^2.9.2",
     "angular2-notifications": "^9.0.0",
+    "bootstrap": "^5.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
