--- a/src/main/resources/APachas/angular.json
+++ b/src/main/resources/APachas/angular.json
@@ -31,7 +31,8 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css"
+              "src/styles.css",
+              "@ng-select/ng-select/themes/default.theme.css"
             ],
             "scripts": [
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
