--- a/src/main/resources/APachas/package.json
+++ b/src/main/resources/APachas/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "@ng-select/ng-select": "^7.3.0",
     "@popperjs/core": "^2.9.2",
     "angular2-notifications": "^9.0.0",
     "bootstrap": "^5.0.2",
