--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.jdbc.time_zone = Europe/Paris
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -25,7 +26,7 @@ spring.data.rest.default-page-size=5
 spring.data.rest.max-page-size=10
 
 #DATE-TIME
-spring.jackson.date-format=dd-MM-yyyy
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 #TEST
 #spring.datasource.url = jdbc:h2:mem:test;DATABASE_TO_UPPER=false
