--- a/src/main/resources/APachas/package.json
+++ b/src/main/resources/APachas/package.json
@@ -29,6 +29,10 @@
     "@popperjs/core": "^2.9.2",
     "angular2-notifications": "^9.0.0",
     "bootstrap": "^5.0.2",
+    "daterangepicker": "^3.1.0",
+    "datetimepicker": "^0.1.39",
+    "jquery": "^3.6.0",
+    "ng2-daterangepicker": "^3.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
