--- a/src/main/resources/APachas/package.json
+++ b/src/main/resources/APachas/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^5.0.2",
     "daterangepicker": "^3.1.0",
     "datetimepicker": "^0.1.39",
+    "fullcalendar": "^5.10.2",
     "jquery": "^3.6.0",
     "ng2-daterangepicker": "^3.0.1",
     "rxjs": "~6.6.0",
@@ -44,7 +45,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.16",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
