--- a/src/main/resources/APachas/package.json
+++ b/src/main/resources/APachas/package.json
@@ -27,13 +27,15 @@
     "@angular/router": "~12.0.4",
     "@ng-select/ng-select": "^7.3.0",
     "@popperjs/core": "^2.9.2",
+    "angular-calendar": "^0.29.0",
     "angular2-notifications": "^9.0.0",
     "bootstrap": "^5.0.2",
+    "date-fns": "^2.28.0",
     "daterangepicker": "^3.1.0",
     "datetimepicker": "^0.1.39",
-    "fullcalendar": "^5.10.2",
     "jquery": "^3.6.0",
     "ng2-daterangepicker": "^3.0.1",
+    "ngx-paypal": "^6.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
