--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #CONEXION
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/APachas?useUnicode=true&characterEncoding=utf-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/APachas?useUnicode=true&characterEncoding=utf-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Madrid
 spring.datasource.username=root
 spring.datasource.password=abc123.
 spring.datasource.initialization-mode=always
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=false
-spring.jpa.properties.hibernate.jdbc.time_zone = Europe/Paris
+spring.jpa.properties.hibernate.jdbc.time_zone = Europe/Madrid
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -28,10 +28,12 @@ spring.data.rest.max-page-size=10
 #DATE-TIME
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
+
 #TEST
-#spring.datasource.url = jdbc:h2:mem:test;DATABASE_TO_UPPER=false
+#spring.datasource.url = jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 #spring.h2.console.enabled= true
-#spring.datasource.username = sa
+#spring.datasource.username= sa
+#spring.datasource.password =
 #spring.datasource.driverClassName = org.h2.Driver
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
@@ -46,6 +48,18 @@ spring.security.user.password= abc123.
 #server.ssl.key-store-password= tfgsecuritypassabc123.
 #server.ssl.key-store-type= PKCS12
 #server.ssl.key-alias= tfgsecurity
+
+#EMAIL
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=noamarchante6@gmail.com
+spring.mail.password=mxbjxaooulsfvtfb
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
 #JWT
 jwt.secret=techgeeknext
