--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,8 +52,8 @@ spring.security.user.password= abc123.
 #EMAIL
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=noamarchante6@gmail.com
-spring.mail.password=mxbjxaooulsfvtfb
+spring.mail.username=apachasgestion@gmail.com
+spring.mail.password=jgntqwdelxtrqvzf
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
